	  don't call indexed_type in this case
	* fextfh.c (OP_GETINFO): if no dictionary is found for the file,
	  call indexed_type to get more details
	* fileio.c (cob_read_dict), fdbd.c (ix_bdb_open),
	  flmdb.c (lmdb_open): if no dictionary is found for the file,
	  assume "match" against file definition
	* fileio.c: minor adjustments for io-module loading

2021-09-12  Ron Norman <rjn@inglenet.com>

	* fextfh.c: Some corrections for RELATIVE files and remove duplicated code
	* common.h: add flag_file_format to cob_module

2021-09-05  Ron Norman <rjn@inglenet.com>

	* fextfh.c: Add check for record address being available

2021-08-30  Simon Sobisch <simonsobisch@gnu.org>

	* general: fix local includes to use "local" instead of <system>
	* reportio.c: remove unused variables/code,
	  remove duplicated includes coming from fileio.h
	* fextfh.c (copy_fcd_to_file): only access key structure for INDEXED files

2021-08-29  Ron Norman <rjn@inglenet.com>

	* fileio.c: Adjust record size up to minimum for the file
	* fextfh.c: Only check for missing record address if an I/O request
	           Do not check for OPEN/CLOSE operations

2021-08-27  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c (cob_file_open) [!HAVE_UNISTD_H || _WIN32]: also support
	  ASSIGN to :CI:, :CO:, :CE: in these cases

2021-08-25  Ron Norman <rjn@inglenet.com>

	* common.h: Replaced report.resume with report.go_label
	* reportio.c: Rework callback to application to use 
	             "switch (go_label) case  goto xxx"
	* fextfh.c: If record address changes, force rebuild of key info 

2021-08-23  Ron Norman <rjn@inglenet.com>

	* fileio.c: cob_key_def only set 39 if 'keycheck' was requested
	* fextfh.c: If FCD record address changes, make required updates

2021-08-18  Ron Norman <rjn@inglenet.com>

	* fileio.c: If 'record' is not allocated when reading filename.dd
	         then allocate one
	* fextfh.c: Check for key field defined before using it

2021-08-07  Ron Norman <rjn@inglenet.com>
